--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Kiko Sprague <ksprague0592@gmail.com>
+Charles Johnson <tj.johnson1027@gmail.com>
